// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeContainer should match snapshot if there are some videos present in state 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HomeContainer />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        <div
          className="row"
        >
          <div
            className="col-xs-12 col-sm-4 video-margin"
          >
            <SingleVideo
              fullName="1233___some.mp4"
              onClickHandler={[Function]}
              src="http://localhost:4000/uploads/1233___some.mp4"
              title="some"
            />
          </div>
          <div
            className="col-xs-12 col-sm-4 video-margin"
          >
            <SingleVideo
              fullName="2345___any.mp4"
              onClickHandler={[Function]}
              src="http://localhost:4000/uploads/2345___any.mp4"
              title="any"
            />
          </div>
        </div>,
      ],
      "className": "container-fluid container-padding",
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-xs-12 col-sm-4 video-margin"
            >
              <SingleVideo
                fullName="1233___some.mp4"
                onClickHandler={[Function]}
                src="http://localhost:4000/uploads/1233___some.mp4"
                title="some"
              />
            </div>,
            <div
              className="col-xs-12 col-sm-4 video-margin"
            >
              <SingleVideo
                fullName="2345___any.mp4"
                onClickHandler={[Function]}
                src="http://localhost:4000/uploads/2345___any.mp4"
                title="any"
              />
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1233___some.mp4",
            "nodeType": "host",
            "props": Object {
              "children": <SingleVideo
                fullName="1233___some.mp4"
                onClickHandler={[Function]}
                src="http://localhost:4000/uploads/1233___some.mp4"
                title="some"
              />,
              "className": "col-xs-12 col-sm-4 video-margin",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "fullName": "1233___some.mp4",
                "onClickHandler": [Function],
                "src": "http://localhost:4000/uploads/1233___some.mp4",
                "title": "some",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "2345___any.mp4",
            "nodeType": "host",
            "props": Object {
              "children": <SingleVideo
                fullName="2345___any.mp4"
                onClickHandler={[Function]}
                src="http://localhost:4000/uploads/2345___any.mp4"
                title="any"
              />,
              "className": "col-xs-12 col-sm-4 video-margin",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "fullName": "2345___any.mp4",
                "onClickHandler": [Function],
                "src": "http://localhost:4000/uploads/2345___any.mp4",
                "title": "any",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          <div
            className="row"
          >
            <div
              className="col-xs-12 col-sm-4 video-margin"
            >
              <SingleVideo
                fullName="1233___some.mp4"
                onClickHandler={[Function]}
                src="http://localhost:4000/uploads/1233___some.mp4"
                title="some"
              />
            </div>
            <div
              className="col-xs-12 col-sm-4 video-margin"
            >
              <SingleVideo
                fullName="2345___any.mp4"
                onClickHandler={[Function]}
                src="http://localhost:4000/uploads/2345___any.mp4"
                title="any"
              />
            </div>
          </div>,
        ],
        "className": "container-fluid container-padding",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-12 col-sm-4 video-margin"
              >
                <SingleVideo
                  fullName="1233___some.mp4"
                  onClickHandler={[Function]}
                  src="http://localhost:4000/uploads/1233___some.mp4"
                  title="some"
                />
              </div>,
              <div
                className="col-xs-12 col-sm-4 video-margin"
              >
                <SingleVideo
                  fullName="2345___any.mp4"
                  onClickHandler={[Function]}
                  src="http://localhost:4000/uploads/2345___any.mp4"
                  title="any"
                />
              </div>,
            ],
            "className": "row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1233___some.mp4",
              "nodeType": "host",
              "props": Object {
                "children": <SingleVideo
                  fullName="1233___some.mp4"
                  onClickHandler={[Function]}
                  src="http://localhost:4000/uploads/1233___some.mp4"
                  title="some"
                />,
                "className": "col-xs-12 col-sm-4 video-margin",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "fullName": "1233___some.mp4",
                  "onClickHandler": [Function],
                  "src": "http://localhost:4000/uploads/1233___some.mp4",
                  "title": "some",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "2345___any.mp4",
              "nodeType": "host",
              "props": Object {
                "children": <SingleVideo
                  fullName="2345___any.mp4"
                  onClickHandler={[Function]}
                  src="http://localhost:4000/uploads/2345___any.mp4"
                  title="any"
                />,
                "className": "col-xs-12 col-sm-4 video-margin",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "fullName": "2345___any.mp4",
                  "onClickHandler": [Function],
                  "src": "http://localhost:4000/uploads/2345___any.mp4",
                  "title": "any",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`HomeContainer should match snapshot in default state 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HomeContainer />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="jumbotron"
        >
          <h1
            className="display-4"
          >
            Hello!
          </h1>
          <p
            className="lead"
          >
            No video is present in library.
          </p>
          <hr
            className="my-4"
          />
          <p>
            Click Upload button to upload a video.
          </p>
          <Link
            className="btn btn-warning btn-lg"
            replace={false}
            role="button"
            to="/upload"
          >
            Upload
          </Link>
        </div>,
        false,
      ],
      "className": "container-fluid container-padding",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="display-4"
            >
              Hello!
            </h1>,
            <p
              className="lead"
            >
              No video is present in library.
            </p>,
            <hr
              className="my-4"
            />,
            <p>
              Click Upload button to upload a video.
            </p>,
            <Link
              className="btn btn-warning btn-lg"
              replace={false}
              role="button"
              to="/upload"
            >
              Upload
            </Link>,
          ],
          "className": "jumbotron",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Hello!",
              "className": "display-4",
            },
            "ref": null,
            "rendered": "Hello!",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "No video is present in library.",
              "className": "lead",
            },
            "ref": null,
            "rendered": "No video is present in library.",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "my-4",
            },
            "ref": null,
            "rendered": null,
            "type": "hr",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Click Upload button to upload a video.",
            },
            "ref": null,
            "rendered": "Click Upload button to upload a video.",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Upload",
              "className": "btn btn-warning btn-lg",
              "replace": false,
              "role": "button",
              "to": "/upload",
            },
            "ref": null,
            "rendered": "Upload",
            "type": [Function],
          },
        ],
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="jumbotron"
          >
            <h1
              className="display-4"
            >
              Hello!
            </h1>
            <p
              className="lead"
            >
              No video is present in library.
            </p>
            <hr
              className="my-4"
            />
            <p>
              Click Upload button to upload a video.
            </p>
            <Link
              className="btn btn-warning btn-lg"
              replace={false}
              role="button"
              to="/upload"
            >
              Upload
            </Link>
          </div>,
          false,
        ],
        "className": "container-fluid container-padding",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h1
                className="display-4"
              >
                Hello!
              </h1>,
              <p
                className="lead"
              >
                No video is present in library.
              </p>,
              <hr
                className="my-4"
              />,
              <p>
                Click Upload button to upload a video.
              </p>,
              <Link
                className="btn btn-warning btn-lg"
                replace={false}
                role="button"
                to="/upload"
              >
                Upload
              </Link>,
            ],
            "className": "jumbotron",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Hello!",
                "className": "display-4",
              },
              "ref": null,
              "rendered": "Hello!",
              "type": "h1",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No video is present in library.",
                "className": "lead",
              },
              "ref": null,
              "rendered": "No video is present in library.",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "my-4",
              },
              "ref": null,
              "rendered": null,
              "type": "hr",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Click Upload button to upload a video.",
              },
              "ref": null,
              "rendered": "Click Upload button to upload a video.",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Upload",
                "className": "btn btn-warning btn-lg",
                "replace": false,
                "role": "button",
                "to": "/upload",
              },
              "ref": null,
              "rendered": "Upload",
              "type": [Function],
            },
          ],
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
